# tauri-playground

./: .gitignore  package.json  postcss.config.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: auth.rs
src/components/svg/: IconCloseWindow.tsx  IconMaximizeWindow.tsx  IconMinimizeWindow.tsx  SteamLogo.tsx
src/components/window/: MacOsTitlebar.module.css  MacOsTitlebar.tsx  Titlebar.css  Titlebar.tsx  WindowsTitlebar.module.css  WindowsTitlebar.tsx
src/sections/: HighlightsSection.module.css  HighlightsSection.tsx  MainContent.module.css  MainContent.tsx  Sidebar.module.css  Sidebar.tsx  Toolbar.module.css  Toolbar.tsx
